--- a/upload/templates/upload/addform.html
+++ b/upload/templates/upload/addform.html
@@ -21,7 +21,7 @@
                  <div class="card-body">
                      <div class="card-text">
 				<h2> Add Photo</h2>
-                        <form action="." method="POST" enctype="multipart/form-data">
+                        <form action="#" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form|crispy }}
                          <button type="submit" class="btn btn-primary btn-sm"> Upload</button>
